--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -379,16 +379,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- collections -->
 	<div class="new-collections">
 		<div class="container">
+
 			<h3 class="animated wow zoomIn" data-wow-delay=".5s">New Collections</h3>
 			<p class="est animated wow zoomIn" data-wow-delay=".5s">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
 				deserunt mollit anim id est laborum.</p>
 			<div class="new-collections-grids">
+
 				<div class="col-md-3 new-collections-grid">
 					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
 						<div class="new-collections-grid1-image">
-							<a href="single.html" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
+							<a href="single.html?gid=1" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
 							<div class="new-collections-grid1-image-pos">
-								<a href="single.html">Quick View</a>
+								<a href="single.html?gid=1">Quick View</a>
 							</div>
 							<div class="new-collections-grid1-right">
 								<div class="rating">
@@ -411,7 +413,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 						</div>
-						<h4><a href="single.html">Formal Shirt</a></h4>
+						<h4><a href="single.html?gid=1">Formal Shirt</a></h4>
 						<p>Vel illum qui dolorem eum fugiat.</p>
 						<div class="new-collections-grid1-left simpleCart_shelfItem">
 							<p><i>$325</i> <span class="item_price">$250</span><a class="item_add" href="javascript:addToCart(1)">add to cart </a></p>
@@ -419,9 +421,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
 						<div class="new-collections-grid1-image">
-							<a href="single.html" class="product-image"><img src="images/8.jpg" alt=" " class="img-responsive" /></a>
+							<a href="single.html?gid=2" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
 							<div class="new-collections-grid1-image-pos">
-								<a href="single.html">Quick View</a>
+								<a href="single.html?gid=2">Quick View</a>
 							</div>
 							<div class="new-collections-grid1-right">
 								<div class="rating">
@@ -444,130 +446,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 						</div>
-						<h4><a href="single.html">Running Shoes</a></h4>
+						<h4><a href="single.html?gid=2">Running Shoes</a></h4>
 						<p>Vel illum qui dolorem eum fugiat.</p>
 						<div class="new-collections-grid1-left simpleCart_shelfItem">
 							<p><i>$280</i> <span class="item_price">$150</span><a class="item_add" href="javascript:addToCart(2)">add to cart </a></p>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6 new-collections-grid">
-					<div class="new-collections-grid1 new-collections-grid1-image-width animated wow slideInUp" data-wow-delay=".5s">
-						<div class="new-collections-grid1-image">
-							<a href="single.html" class="product-image"><img src="images/5.jpg" alt=" " class="img-responsive" /></a>
-							<div class="new-collections-grid1-image-pos new-collections-grid1-image-pos1">
-								<a href="single.html">Quick View</a>
-							</div>
-							<div class="new-collections-grid1-right new-collections-grid1-right-rate">
-								<div class="rating">
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive" />
-									</div>
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive" />
-									</div>
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive" />
-									</div>
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive" />
-									</div>
-									<div class="rating-left">
-										<img src="images/1.png" alt=" " class="img-responsive" />
-									</div>
-									<div class="clearfix"> </div>
-								</div>
-							</div>
-							<div class="new-one">
-								<p>New</p>
-							</div>
-						</div>
-						<h4><a href="single.html">Dining Table</a></h4>
-						<p>Vel illum qui dolorem eum fugiat.</p>
-						<div class="new-collections-grid1-left simpleCart_shelfItem">
-							<p><i>$580</i> <span class="item_price">$550</span><a class="item_add" href="#">add to cart </a></p>
-						</div>
-					</div>
-					<div class="new-collections-grid-sub-grids">
-						<div class="new-collections-grid1-sub">
-							<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
-								<div class="new-collections-grid1-image">
-									<a href="single.html" class="product-image"><img src="images/6.jpg" alt=" " class="img-responsive" /></a>
-									<div class="new-collections-grid1-image-pos">
-										<a href="single.html">Quick View</a>
-									</div>
-									<div class="new-collections-grid1-right">
-										<div class="rating">
-											<div class="rating-left">
-												<img src="images/2.png" alt=" " class="img-responsive" />
-											</div>
-											<div class="rating-left">
-												<img src="images/2.png" alt=" " class="img-responsive" />
-											</div>
-											<div class="rating-left">
-												<img src="images/2.png" alt=" " class="img-responsive" />
-											</div>
-											<div class="rating-left">
-												<img src="images/2.png" alt=" " class="img-responsive" />
-											</div>
-											<div class="rating-left">
-												<img src="images/2.png" alt=" " class="img-responsive" />
-											</div>
-											<div class="clearfix"> </div>
-										</div>
-									</div>
-								</div>
-								<h4><a href="single.html">Wall Lamp</a></h4>
-								<p>Vel illum qui dolorem eum fugiat.</p>
-								<div class="new-collections-grid1-left simpleCart_shelfItem">
-									<p><i>$480</i> <span class="item_price">$400</span><a class="item_add" href="#">add to cart </a></p>
-								</div>
-							</div>
-						</div>
-						<div class="new-collections-grid1-sub">
-							<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
-								<div class="new-collections-grid1-image">
-									<a href="single.html" class="product-image"><img src="images/9.jpg" alt=" " class="img-responsive" /></a>
-									<div class="new-collections-grid1-image-pos">
-										<a href="single.html">Quick View</a>
-									</div>
-									<div class="new-collections-grid1-right">
-										<div class="rating">
-											<div class="rating-left">
-												<img src="images/2.png" alt=" " class="img-responsive" />
-											</div>
-											<div class="rating-left">
-												<img src="images/1.png" alt=" " class="img-responsive" />
-											</div>
-											<div class="rating-left">
-												<img src="images/1.png" alt=" " class="img-responsive" />
-											</div>
-											<div class="rating-left">
-												<img src="images/1.png" alt=" " class="img-responsive" />
-											</div>
-											<div class="rating-left">
-												<img src="images/1.png" alt=" " class="img-responsive" />
-											</div>
-											<div class="clearfix"> </div>
-										</div>
-									</div>
-								</div>
-								<h4><a href="single.html">Wall Lamp</a></h4>
-								<p>Vel illum qui dolorem eum fugiat.</p>
-								<div class="new-collections-grid1-left simpleCart_shelfItem">
-									<p><i>$280</i> <span class="item_price">$150</span><a class="item_add" href="#">add to cart </a></p>
-								</div>
-							</div>
-						</div>
-						<div class="clearfix"> </div>
-					</div>
-				</div>
+
 				<div class="col-md-3 new-collections-grid">
 					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
 						<div class="new-collections-grid1-image">
-							<a href="single.html" class="product-image"><img src="images/10.jpg" alt=" " class="img-responsive" /></a>
+							<a href="single.html?gid=3" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
 							<div class="new-collections-grid1-image-pos">
-								<a href="single.html">Quick View</a>
+								<a href="single.html?gid=3">Quick View</a>
 							</div>
 							<div class="new-collections-grid1-right">
 								<div class="rating">
@@ -590,17 +482,53 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 						</div>
-						<h4><a href="single.html">Pearl & Stone Anklet</a></h4>
+						<h4><a href="single.html?gid=3">Formal Shirt</a></h4>
 						<p>Vel illum qui dolorem eum fugiat.</p>
 						<div class="new-collections-grid1-left simpleCart_shelfItem">
-							<p><i>$180</i> <span class="item_price">$120</span><a class="item_add" href="#">add to cart </a></p>
+							<p><i>$325</i> <span class="item_price">$250</span><a class="item_add" href="javascript:addToCart(3)">add to cart </a></p>
 						</div>
 					</div>
 					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
 						<div class="new-collections-grid1-image">
-							<a href="single.html" class="product-image"><img src="images/11.jpg" alt=" " class="img-responsive" /></a>
+							<a href="single.html?gid=4" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
 							<div class="new-collections-grid1-image-pos">
-								<a href="single.html">Quick View</a>
+								<a href="single.html?gid=4">Quick View</a>
+							</div>
+							<div class="new-collections-grid1-right">
+								<div class="rating">
+									<div class="rating-left">
+										<img src="images/2.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/2.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/1.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/1.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/1.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="clearfix"> </div>
+								</div>
+							</div>
+						</div>
+						<h4><a href="single.html?gid=4">Running Shoes</a></h4>
+						<p>Vel illum qui dolorem eum fugiat.</p>
+						<div class="new-collections-grid1-left simpleCart_shelfItem">
+							<p><i>$280</i> <span class="item_price">$150</span><a class="item_add" href="javascript:addToCart(4)">add to cart </a></p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-3 new-collections-grid">
+					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
+						<div class="new-collections-grid1-image">
+							<a href="single.html?gid=5" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
+							<div class="new-collections-grid1-image-pos">
+								<a href="single.html?gid=5">Quick View</a>
 							</div>
 							<div class="new-collections-grid1-right">
 								<div class="rating">
@@ -614,7 +542,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<img src="images/2.png" alt=" " class="img-responsive" />
 									</div>
 									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive" />
+										<img src="images/1.png" alt=" " class="img-responsive" />
 									</div>
 									<div class="rating-left">
 										<img src="images/1.png" alt=" " class="img-responsive" />
@@ -623,14 +551,120 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 						</div>
-						<h4><a href="single.html">Stones Bangles</a></h4>
+						<h4><a href="single.html?gid=5">Formal Shirt</a></h4>
 						<p>Vel illum qui dolorem eum fugiat.</p>
 						<div class="new-collections-grid1-left simpleCart_shelfItem">
-							<p><i>$340</i> <span class="item_price">$257</span><a class="item_add" href="#">add to cart </a></p>
+							<p><i>$325</i> <span class="item_price">$250</span><a class="item_add" href="javascript:addToCart(5)">add to cart </a></p>
+						</div>
+					</div>
+					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
+						<div class="new-collections-grid1-image">
+							<a href="single.html?gid=6" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
+							<div class="new-collections-grid1-image-pos">
+								<a href="single.html?gid=6">Quick View</a>
+							</div>
+							<div class="new-collections-grid1-right">
+								<div class="rating">
+									<div class="rating-left">
+										<img src="images/2.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/2.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/1.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/1.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/1.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="clearfix"> </div>
+								</div>
+							</div>
+						</div>
+						<h4><a href="single.html?gid=6">Running Shoes</a></h4>
+						<p>Vel illum qui dolorem eum fugiat.</p>
+						<div class="new-collections-grid1-left simpleCart_shelfItem">
+							<p><i>$280</i> <span class="item_price">$150</span><a class="item_add" href="javascript:addToCart(6)">add to cart </a></p>
 						</div>
 					</div>
 				</div>
-				<div class="clearfix"> </div>
+
+				<div class="col-md-3 new-collections-grid">
+					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
+						<div class="new-collections-grid1-image">
+							<a href="single.html?gid=7" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
+							<div class="new-collections-grid1-image-pos">
+								<a href="single.html?gid=7">Quick View</a>
+							</div>
+							<div class="new-collections-grid1-right">
+								<div class="rating">
+									<div class="rating-left">
+										<img src="images/2.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/2.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/2.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/1.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/1.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="clearfix"> </div>
+								</div>
+							</div>
+						</div>
+						<h4><a href="single.html?gid=7">Formal Shirt</a></h4>
+						<p>Vel illum qui dolorem eum fugiat.</p>
+						<div class="new-collections-grid1-left simpleCart_shelfItem">
+							<p><i>$325</i> <span class="item_price">$250</span><a class="item_add" href="javascript:addToCart(7)">add to cart </a></p>
+						</div>
+					</div>
+					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
+						<div class="new-collections-grid1-image">
+							<a href="single.html?gid=8" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
+							<div class="new-collections-grid1-image-pos">
+								<a href="single.html?gid=8">Quick View</a>
+							</div>
+							<div class="new-collections-grid1-right">
+								<div class="rating">
+									<div class="rating-left">
+										<img src="images/2.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/2.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/1.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/1.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="rating-left">
+										<img src="images/1.png" alt=" " class="img-responsive" />
+									</div>
+									<div class="clearfix"> </div>
+								</div>
+							</div>
+						</div>
+						<h4><a href="single.html?gid=8">Running Shoes</a></h4>
+						<p>Vel illum qui dolorem eum fugiat.</p>
+						<div class="new-collections-grid1-left simpleCart_shelfItem">
+							<p><i>$280</i> <span class="item_price">$150</span><a class="item_add" href="javascript:addToCart(8)">add to cart </a></p>
+						</div>
+					</div>
+				</div>
+
+
+
+
+
 			</div>
 		</div>
 	</div>
